--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="https://www.linkedin.com/in/ashish-kumar-322480152/" class="p-info bold">Ashish Kumar</a>
                 </div>
             </div>
-            <h1 class="main-heading">Skills</h1>
+            <h1 class="main-heading wrap">Skills</h1>
             <div class="skill-1st-div">
                 <hr>
                 <div>
