--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="skill-1st-div">
                 <hr>
                 <div>
-                    <h1 class="sub-heading">Web
+                    <h1 class="sub-heading wrap">Web
                         Development</h1>
                     <p>Fresher</p>
                     <div>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div>
-                    <h1 class="sub-heading">App
+                    <h1 class="sub-heading wrap">App
                         Development</h1>
                     <p>Fresher</p>
                     <div>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div>
-                    <h1 class="sub-heading">IDE</h1>
+                    <h1 class="sub-heading wrap">IDE</h1>
                     <p>Expert</p>
                     <span>
                         <p class="final-skill inline">Visual Basic</p>
@@ -81,7 +81,7 @@
                     </span>
                 </div>
                 <div>
-                    <h1 class="sub-heading">Programming</h1>
+                    <h1 class="sub-heading wrap">Programming</h1>
                     <p>Expert</p>
                     <span>
                         <p class="final-skill inline">C</p>
@@ -90,14 +90,14 @@
                     </span>
                 </div>
                 <div>
-                    <h1 class="sub-heading">Database</h1>
+                    <h1 class="sub-heading wrap">Database</h1>
                     <p>Fresher</p>
                     <span>
                         <p class="final-skill inline">SQL</p>
                     </span>
                 </div>
                 <div>
-                    <h1 class="sub-heading">Framework</h1>
+                    <h1 class="sub-heading wrap">Framework</h1>
                     <p>Expert</p>
                     <span>
                         <p class="final-skill inline">BootStrap</p>
