--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1 class="main-heading wrap">Skills</h1>
             <div class="skill-1st-div">
                 <hr>
-                <div>
+                <div class="pad">
                     <h1 class="sub-heading wrap">Web
                         Development</h1>
                     <p>Fresher</p>
@@ -64,7 +64,7 @@
                         <p class="final-skill inline">JavaScript</p>
                     </div>
                 </div>
-                <div>
+                <div class="pad">
                     <h1 class="sub-heading wrap">App
                         Development</h1>
                     <p>Fresher</p>
@@ -72,7 +72,7 @@
                         <p class="final-skill inline">Java</p>
                     </div>
                 </div>
-                <div>
+                <div class="pad">
                     <h1 class="sub-heading wrap">IDE</h1>
                     <p>Expert</p>
                     <span>
@@ -80,7 +80,7 @@
                         <p class="final-skill inline">Visual Studio Code</p>
                     </span>
                 </div>
-                <div>
+                <div class="pad">
                     <h1 class="sub-heading wrap">Programming</h1>
                     <p>Expert</p>
                     <span>
@@ -89,14 +89,14 @@
                         <p class="final-skill inline">Data Structure</p>
                     </span>
                 </div>
-                <div>
+                <div class="pad">
                     <h1 class="sub-heading wrap">Database</h1>
                     <p>Fresher</p>
                     <span>
                         <p class="final-skill inline">SQL</p>
                     </span>
                 </div>
-                <div>
+                <div class="pad">
                     <h1 class="sub-heading wrap">Framework</h1>
                     <p>Expert</p>
                     <span>
