--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1 class="main-heading wrap">Skills</h1>
             <div class="skill-1st-div">
                 <hr>
-                <div class="pad" style="padding: 10px 0px;">
+                <div class="pad">
                     <h1 class="sub-heading wrap">Web
                         Development</h1>
                     <p>Fresher</p>
